--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta name="og:image" content="https://i.imgur.com/K38sw4e.png" />
-    <meta
-      name="og:title"
-      content="No Server, No Install, Mobile Friendly PDF Editor - PDF Editor"
-    />
-    <meta
-      name="og:description"
-      content="Add images, signatures, text to your PDF. All is done in your browser!"
-    />
-    <meta
-      name="description"
-      content="Add images, signatures, text to your PDF. All is done in your browser!"
-    />
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <head>   
     <title>
-      No Server, No Install, Mobile Friendly PDF Editor - PDF Editor
+      PDF Editor
     </title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/build/bundle.css" />
